# pawk

./: Makefile  README  README.md  main.py  pyproject.toml  tests.py
examples/: fruit_orders.txt  total_order_cost.py  total_sum.py
pawk/: __init__.py  __main__.py  pawk.py  util.py
src/prawk/: __init__.py  __main__.py  prawk.py
tests/: test_pawk.py  test_prawk.py
