[project]
name = "pawk"
version = "0.1.0"
description = "awk-like python tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "main.py",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
pawk = "main:main"
